# qt_cmake_demo

./: CMakeLists.txt  README.md
resource/: res.qrc
src/: mainwindow.cpp
ui/: mainwindow.ui
